Fix problem with overflow of information

--- a/src/css/Movie.css
+++ b/src/css/Movie.css
@@ -4,6 +4,7 @@
   width: 70vw;
   color: #262e31;
   display: none;
+  margin-bottom: 130px; 
 }
 
 .movie-show {
